resources/service.yaml
# service.yaml
# Content for /resources/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: resource-name
  labels:
    app: component-name
    version: v1.0.0
    component: service
spec:
  selector:
    app: component-name
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
